# herdr-pluck

./: .ish.yml  AGENTS.md  Cargo.toml  LICENSE  README.md  herdr-plugin.toml
.github/workflows/: ci.yml  release.yml
.ish/: herdr-pluck-1iof--add-renderer-terminal-smoke-output-path.md  herdr-pluck-1iof--render-readonly-picker-view-in-terminal.md  herdr-pluck-50oj--handle-overlaysource-pane-geometry-mismatch.md  herdr-pluck-5dl8--add-local-herdr-pluck-keybinding.md  herdr-pluck-94xq--implement-fixed-width-hint-engine.md  herdr-pluck-ab5v--add-visible-picker-scaffold-pause.md  herdr-pluck-c6k7--set-up-local-herdr-plugin-smoke-testing.md  herdr-pluck-clt9--finalize-plugin-packaging-and-v1-verification.md  herdr-pluck-g57o--support-expanded-tmux-fingers-compatible-pattern-s.md  herdr-pluck-guwf--wire-picker-input-loop-and-copy-flow.md  herdr-pluck-gz33--implement-clipboard-fallback-adapter.md  herdr-pluck-jyye--scaffold-rust-herdr-pluck-plugin-project.md  herdr-pluck-k71j--establish-deep-herdr-layout-tab-foundation-and-sna.md  herdr-pluck-obnm--implement-built-in-pattern-engine.md  herdr-pluck-t3sf--herdr-pluck-inline-hints-v1.md  herdr-pluck-vhdh--implement-herdr-adapter-and-overlay-action.md  herdr-pluck-vhdh--implement-herdr-layout-tab-launcher-and-executor.md  herdr-pluck-z4cv--implement-inline-overlay-renderer.md
plans/: 1781838387-herdr-pluck-inline-hints.md
scripts/: install-binary.sh
src/: cli.rs  clipboard.rs  config.rs  herdr.rs  hints.rs  input.rs  lib.rs  main.rs  model.rs  patterns.rs  renderer.rs  viewport.rs
src/clipboard/: detect.rs  error.rs  mod.rs  (+3 more)
(+18 files in other folders)
