[package]
name = "herdr-pluck"
version = "0.1.0"
edition = "2021"
description = "Herdr plugin for tmux-fingers-style visible terminal plucking"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
which = "6.0"

[dev-dependencies]
pretty_assertions = "1.4"
